[language modelling] adding a deck predictor block

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import csv\n",
     "import functools\n",
     "import glob\n",
     "import os\n",
@@ -29,6 +30,7 @@
     "from tqdm.notebook import tqdm\n",
     "from transformers import (BertConfig,\n",
     "                          BertForPreTraining,\n",
+    "                          BertForNextSentencePrediction,\n",
     "                          BertTokenizerFast,\n",
     "                          DataCollatorForLanguageModeling,\n",
     "                          EarlyStoppingCallback,\n",
@@ -55,12 +57,13 @@
     "DO_PRE_TRAINING = False\n",
     "DO_SMALL_PRETRAIN_TEST = False\n",
     "CHECK_PRETRAINED_MODEL_RESULTS = False\n",
+    "DO_DECK_RECOMMENDATIONS = True\n",
     "\n",
     "# whether or not we cap the number of card pairs, or we choose or use\n",
     "# all possible pairs\n",
     "# NUM_MAX_PAIRS = None\n",
-    "# NUM_MAX_PAIRS = 500\n",
-    "NUM_MAX_PAIRS = 1"
+    "NUM_MAX_PAIRS = 500\n",
+    "# NUM_MAX_PAIRS = 1"
    ]
   },
   {
@@ -949,6 +952,92 @@
    "source": [
     "# harder: destroy target nonland [MASK] (permanent)\n",
     "fill_mask('{3}{w}{b} legendary creature — vampire knight 4/4: vigilance, lifelink {t}, pay 7 life: destroy target nonland [MASK]. activate this ability only during your turn.') if DO_PRE_TRAINING else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if DO_DECK_RECOMMENDATIONS:\n",
+    "    EVAL_BATCH = 186\n",
+    "    \n",
+    "    # loading the trained model\n",
+    "    config = BertConfig.from_pretrained(MODEL_NAME)\n",
+    "    model = BertForNextSentencePrediction.from_pretrained(MODEL_NAME, config=config)\n",
+    "    tokenizer = BertTokenizerFast.from_pretrained(MODEL_NAME)\n",
+    "    \n",
+    "    training_args = TrainingArguments(\n",
+    "        output_dir='./ignore',\n",
+    "        per_device_eval_batch_size=EVAL_BATCH\n",
+    "    )\n",
+    "\n",
+    "    trainer = Trainer(model=model, args=training_args, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deck_names = ['esper_blink',\n",
+    "              'goblins',\n",
+    "              'kykar',\n",
+    "              'infinite_purphoros',\n",
+    "              'rogues',\n",
+    "              'tokens']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if DO_DECK_RECOMMENDATIONS:\n",
+    "    tokenizer_map_func = build_tokenizer_map_func(tokenizer, max_length=MAX_SEQ_LENGTH)\n",
+    "    \n",
+    "    ds_to_check = (datasets.load_dataset('csv',\n",
+    "                                         data_files={k: f'{k}.csv' for k in deck_names},\n",
+    "                                         quoting=csv.QUOTE_ALL)\n",
+    "                   .map(tokenizer_map_func, batched=True))\n",
+    "\n",
+    "ds_to_check if DO_DECK_RECOMMENDATIONS else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.special import softmax\n",
+    "\n",
+    "if DO_DECK_RECOMMENDATIONS:\n",
+    "    for deck_name in deck_names:\n",
+    "        print(f\"deck_name = {deck_name}\")\n",
+    "        p = trainer.predict(ds_to_check[deck_name])\n",
+    "        print(f\"p.predictions.shape = {p.predictions.shape}\")\n",
+    "\n",
+    "        probs = softmax(p.predictions, axis=1)\n",
+    "\n",
+    "        z = pd.DataFrame({'p0': probs[:, 0],\n",
+    "                          'p1': probs[:, 1],\n",
+    "                          'y_pred': probs.argmax(axis=1),\n",
+    "                          'name_b': ds_to_check[deck_name]['name_b'],\n",
+    "                          'text_b': ds_to_check[deck_name]['text_b']})\n",
+    "        z.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "        recs = (z\n",
+    "                .groupby(['name_b', 'text_b'])\n",
+    "                .p0\n",
+    "                .median()\n",
+    "                .sort_values(ascending=False)\n",
+    "                .reset_index())\n",
+    "\n",
+    "        recs.to_parquet(f\"{deck_name}.mlm.parquet\")"
    ]
   },
   {
