[pair prediction] code for using the pre-trained mlm model from the other notebook during recommendations

--- a/bert-edh-pair-prediction/edh-pair-prediction.ipynb
+++ b/bert-edh-pair-prediction/edh-pair-prediction.ipynb
@@ -88,15 +88,16 @@
    "source": [
     "CARD_SAMPLER_VERSION = 2\n",
     "\n",
-    "IS_LOCAL_LAPTOP = False\n",
+    "IS_LOCAL_LAPTOP = True\n",
     "BUILD_TTV_DATASETS = False\n",
     "#USE_CARD_SAMPLER_V2 = False\n",
     "DO_FINE_TUNING = False\n",
-    "USE_FINE_TUNED_MODEL = False\n",
+    "USE_FINE_TUNED_MODEL = True\n",
     "CHECK_FINE_TUNED_MODEL_RESULTS = False\n",
     "MAKE_DECK_RECOMMENDATION_DATASETS = False\n",
     "DO_DECK_RECOMMENDATIONS = False\n",
-    "CHECK_DECK_RECOMMENDATIONS = False"
+    "CHECK_DECK_RECOMMENDATIONS = True\n",
+    "USE_MLM_DECK_RECOMMENDATIONS = True"
    ]
   },
   {
@@ -129,8 +130,10 @@
     "    assert USE_FINE_TUNED_MODEL\n",
     "\n",
     "if CHECK_DECK_RECOMMENDATIONS:\n",
-    "    assert USE_FINE_TUNED_MODEL\n",
-    "    assert IS_LOCAL_LAPTOP"
+    "    assert IS_LOCAL_LAPTOP\n",
+    "\n",
+    "if USE_MLM_DECK_RECOMMENDATIONS:\n",
+    "    assert CHECK_DECK_RECOMMENDATIONS"
    ]
   },
   {
@@ -1365,9 +1368,13 @@
    "source": [
     "if CHECK_DECK_RECOMMENDATIONS:\n",
     "    z = None\n",
-    "\n",
+    "    \n",
+    "    deck_rec_vs = '.mlm' if USE_MLM_DECK_RECOMMENDATIONS else version_str\n",
+    "    \n",
     "    for deck_name in deck_names:\n",
-    "        z_now = (pd.read_parquet(f\"{deck_name}{version_str}.parquet\")\n",
+    "        f = f\"{deck_name}{deck_rec_vs}.parquet\"\n",
+    "        print(f'loading {f}')\n",
+    "        z_now = (pd.read_parquet(f)\n",
     "                 .rename(columns={'p0': f\"p0_{deck_name}\"})\n",
     "                 .drop(columns=['text_b'])\n",
     "                 .set_index('name_b'))\n",
@@ -1381,7 +1388,10 @@
     "    \n",
     "    p_cols = [f\"p0_{deck_name}\" for deck_name in deck_names]\n",
     "\n",
-    "    z.loc[:, 'deckcol'] = z[p_cols].idxmin(axis=1)\n",
+    "    z.loc[:, 'deckcol'] = (\n",
+    "        z[p_cols].idxmax(axis=1)\n",
+    "        if USE_MLM_DECK_RECOMMENDATIONS\n",
+    "        else z[p_cols].idxmin(axis=1))\n",
     "\n",
     "z.head() if CHECK_DECK_RECOMMENDATIONS else None"
    ]
@@ -1404,7 +1414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z.sort_values(by='p0_esper_blink').head(20)"
+    "z.sort_values(by='p0_esper_blink', ascending=False).head(20) if CHECK_DECK_RECOMMENDATIONS else None"
    ]
   },
   {
@@ -1413,10 +1423,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z_ip = z[z.deckcol == 'p0_esper_blink'].copy()\n",
-    "z_ip.loc[:, 'specialness'] = z_ip[p_cols].max(axis=1) - z_ip['p0_esper_blink']\n",
+    "deck_name = 'p0_esper_blink'\n",
+    "z_ip = z[z.deckcol == deck_name].copy()\n",
+    "z_ip.loc[:, 'specialness'] = (\n",
+    "        z_ip[deck_name] - z_ip[p_cols].min(axis=1)\n",
+    "        if USE_MLM_DECK_RECOMMENDATIONS\n",
+    "        else z_ip[p_cols].max(axis=1) - z_ip[deck_name])\n",
     "\n",
-    "z_ip.head()"
+    "z_ip.sort_values(by='specialness', ascending=False)"
    ]
   },
   {
@@ -1430,11 +1444,14 @@
     "def foo(deck_name):\n",
     "    z_ip = z[z.deckcol == deck_name].copy()\n",
     "\n",
-    "    z_ip.loc[:, 'specialness'] = z_ip[p_cols].max(axis=1) - z_ip[deck_name]\n",
+    "    z_ip.loc[:, 'specialness'] = (\n",
+    "        z_ip[deck_name] - z_ip[p_cols].min(axis=1)\n",
+    "        if USE_MLM_DECK_RECOMMENDATIONS\n",
+    "        else z_ip[p_cols].max(axis=1) - z_ip[deck_name])\n",
     "\n",
-    "    z_ip.sort_values(by=deck_name, inplace=True)\n",
+    "    z_ip.sort_values(by=deck_name, ascending=not USE_MLM_DECK_RECOMMENDATIONS, inplace=True)\n",
     "\n",
-    "    return z_ip[z_ip.specialness > 0.2].head(10)"
+    "    return z_ip[z_ip.specialness > (0.02 if USE_MLM_DECK_RECOMMENDATIONS else 0.2)].head(10)"
    ]
   },
   {
@@ -1504,7 +1521,8 @@
     "\n",
     "def defining_cards(n=5):\n",
     "    top_n_candidates = {deck_col: set(z\n",
-    "                                      .sort_values(by=f\"p0_{deck_col}\", ascending=True)\n",
+    "                                      .sort_values(by=f\"p0_{deck_col}\",\n",
+    "                                                   ascending=not USE_MLM_DECK_RECOMMENDATIONS)\n",
     "                                      .head(n)\n",
     "                                      .index\n",
     "                                      .values)\n",
