[language modelling v2] getting the second lable type to work

--- a/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
@@ -816,19 +816,19 @@
     "        LOGGING_STEPS = 100\n",
     "        EARLY_STOPPING_PATIENCE = 5\n",
     "        train_dataset = dataset['train']\n",
-    "        #eval_dataset = dataset['validation']\n",
+    "        eval_dataset = dataset['validation']\n",
     "        \n",
-    "        # every 100th record, then cut down to an exact batch\n",
-    "        # size multiple, caculated as:\n",
-    "        #   # divmod(dataset['validation'].num_rows // 10, 186)[0] * 186\n",
-    "        eval_dataset = (dataset['validation']\n",
-    "                        .filter(lambda example, indice: indice % 10 == 0,\n",
-    "                                with_indices=True)\n",
-    "                        .filter(lambda example, indice: indice < 97_836,\n",
-    "                                with_indices=True))\n",
-    "        \n",
-    "        assert eval_dataset.num_rows % EVAL_BATCH == 0\n",
-    "        print(eval_dataset.num_rows)\n",
+    "        ## every 100th record, then cut down to an exact batch\n",
+    "        ## size multiple, caculated as:\n",
+    "        ##   # divmod(dataset['validation'].num_rows // 10, 186)[0] * 186\n",
+    "        #eval_dataset = (dataset['validation']\n",
+    "        #                .filter(lambda example, indice: indice % 10 == 0,\n",
+    "        #                        with_indices=True)\n",
+    "        #                .filter(lambda example, indice: indice < 2_232,\n",
+    "        #                        with_indices=True))\n",
+    "        #\n",
+    "        #assert eval_dataset.num_rows % EVAL_BATCH == 0\n",
+    "        #print(eval_dataset.num_rows)\n",
     "        output_dir = './mtg-language-results-v2'\n",
     "    \n",
     "    # this callback just says that if there are 8 consecutive (measured every\n",
@@ -917,6 +917,18 @@
     "             if split != 'train'}\n",
     "\n",
     "evals if DO_PRE_TRAINING else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fill_mask = pipeline(\n",
+    "    'fill-mask',\n",
+    "    model=local_model_dir,\n",
+    "    tokenizer=tokenizer) if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -1032,7 +1044,7 @@
     "                .sort_values(ascending=False)\n",
     "                .reset_index())\n",
     "\n",
-    "        recs.to_parquet(f\"{deck_name}.mlm.parquet\")"
+    "        recs.to_parquet(f\"{deck_name}.mlm-v2.parquet\")"
    ]
   },
   {
@@ -1059,7 +1071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
