[language modelling v2] different style of deck recommendation

--- a/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
@@ -58,6 +58,7 @@
     "DO_PRE_TRAINING = False\n",
     "DO_SMALL_PRETRAIN_TEST = False\n",
     "CHECK_PRETRAINED_MODEL_RESULTS = False\n",
+    "MAKE_DECK_RECOMMENDATION_INPUTS = False\n",
     "DO_DECK_RECOMMENDATIONS = False\n",
     "\n",
     "# whether or not we cap the number of card pairs, or we choose or use\n",
@@ -80,6 +81,9 @@
     "    assert NUM_MAX_PAIRS is not None, \"this is like 2 TB of data\"\n",
     "\n",
     "if MAKE_MLM_NSP_DATASET_INPUTS:\n",
+    "    assert IS_LOCAL_LAPTOP\n",
+    "\n",
+    "if MAKE_DECK_RECOMMENDATION_INPUTS:\n",
     "    assert IS_LOCAL_LAPTOP"
    ]
   },
@@ -962,6 +966,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## deck recommendations\n",
+    "\n",
+    "the dataset here is different: for each commander card you care about, text a is the commander card and text b is every possible other card in history (lol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commanders = ['merieke ri berit',\n",
+    "              'wort, boggart auntie',\n",
+    "              \"kykar, wind's fury\",\n",
+    "              'purphoros, bronze-blooded',\n",
+    "              'marchesa, the black rose',\n",
+    "              \"trostani, selesnya's voice\",\n",
+    "              'mizzix of the izmagnus',\n",
+    "              'oona, queen of the fae',\n",
+    "              'zada, hedron grinder',\n",
+    "              'breya, etherium shaper']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def commander_file_name(c):\n",
+    "    f_out = (name_a\n",
+    "                 .replace(\"'\", '')\n",
+    "                 .replace(',', '')\n",
+    "                 .replace(' ', '-'))\n",
+    "    return f'{f_out}.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if MAKE_DECK_RECOMMENDATION_INPUTS:\n",
+    "    cards = get_cards()\n",
+    "    \n",
+    "    for name_a in commanders:\n",
+    "        text_a = cards.loc[name_a].mytext\n",
+    "        \n",
+    "        df = (cards\n",
+    "              [cards.index != name_a]\n",
+    "              .copy()\n",
+    "              .reset_index()\n",
+    "              [['name', 'mytext']]\n",
+    "              .rename(columns={'name': 'name_b',\n",
+    "                               'mytest': 'text_b'}))\n",
+    "        df.loc[:, 'name_a'] = name_a\n",
+    "        df.loc[:, 'text_a'] = text_a\n",
+    "        \n",
+    "        f_out = commander_file_name(name_a)\n",
+    "        print(f_out)\n",
+    "        df.to_csv(f_out, index=False, quoting=csv.QUOTE_ALL)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -989,25 +1061,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deck_names = ['esper_blink',\n",
-    "              'goblins',\n",
-    "              'kykar',\n",
-    "              'infinite_purphoros',\n",
-    "              'rogues',\n",
-    "              'tokens']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if DO_DECK_RECOMMENDATIONS:\n",
     "    tokenizer_map_func = build_tokenizer_map_func(tokenizer, max_length=MAX_SEQ_LENGTH)\n",
     "    \n",
     "    ds_to_check = (datasets.load_dataset('csv',\n",
-    "                                         data_files={k: f'{k}.csv' for k in deck_names},\n",
+    "                                         data_files={k: commander_file_name(k)\n",
+    "                                                     for k in deck_names},\n",
     "                                         quoting=csv.QUOTE_ALL)\n",
     "                   .map(tokenizer_map_func, batched=True))\n",
     "\n",
@@ -1071,7 +1130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
