[language modelling v2] getting the second type of deck recommendation to work

--- a/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
@@ -998,12 +998,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def commander_file_name(c):\n",
-    "    f_out = (name_a\n",
-    "                 .replace(\"'\", '')\n",
-    "                 .replace(',', '')\n",
-    "                 .replace(' ', '-'))\n",
-    "    return f'{f_out}.csv'"
+    "def commander_clean_name(c, special_char='-'):\n",
+    "    return (c\n",
+    "            .replace(\"'\", '')\n",
+    "            .replace(',', '')\n",
+    "            .replace('-', ' ')\n",
+    "            .replace(' ', special_char))\n",
+    "\n",
+    "def commander_file_name(c, special_char='-'):\n",
+    "    return f'{commander_clean_name(c, special_char)}.csv'"
    ]
   },
   {
@@ -1065,8 +1068,8 @@
     "    tokenizer_map_func = build_tokenizer_map_func(tokenizer, max_length=MAX_SEQ_LENGTH)\n",
     "    \n",
     "    ds_to_check = (datasets.load_dataset('csv',\n",
-    "                                         data_files={k: commander_file_name(k)\n",
-    "                                                     for k in deck_names},\n",
+    "                                         data_files={commander_clean_name(c, '_'): commander_file_name(c)\n",
+    "                                                     for c in commanders},\n",
     "                                         quoting=csv.QUOTE_ALL)\n",
     "                   .map(tokenizer_map_func, batched=True))\n",
     "\n",
@@ -1082,9 +1085,10 @@
     "from scipy.special import softmax\n",
     "\n",
     "if DO_DECK_RECOMMENDATIONS:\n",
-    "    for deck_name in deck_names:\n",
-    "        print(f\"deck_name = {deck_name}\")\n",
-    "        p = trainer.predict(ds_to_check[deck_name])\n",
+    "    for commander in commanders:\n",
+    "        key = commander_clean_name(commander, '_')\n",
+    "        print(f\"commander = {commander}\")\n",
+    "        p = trainer.predict(ds_to_check[key])\n",
     "        print(f\"p.predictions.shape = {p.predictions.shape}\")\n",
     "\n",
     "        probs = softmax(p.predictions, axis=1)\n",
@@ -1092,8 +1096,8 @@
     "        z = pd.DataFrame({'p0': probs[:, 0],\n",
     "                          'p1': probs[:, 1],\n",
     "                          'y_pred': probs.argmax(axis=1),\n",
-    "                          'name_b': ds_to_check[deck_name]['name_b'],\n",
-    "                          'text_b': ds_to_check[deck_name]['text_b']})\n",
+    "                          'name_b': ds_to_check[key]['name_b'],\n",
+    "                          'text_b': ds_to_check[key]['text_b']})\n",
     "        z.reset_index(drop=True, inplace=True)\n",
     "\n",
     "        recs = (z\n",
@@ -1103,7 +1107,15 @@
     "                .sort_values(ascending=False)\n",
     "                .reset_index())\n",
     "\n",
-    "        recs.to_parquet(f\"{deck_name}.mlm-v2.parquet\")"
+    "        recs.to_parquet(f\"{commander_clean_name(commander, '-')}.mlm-v2.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "cd ~/personal/code/mtg-research/bert-edh-pair-prediction\n",
+    "scp rzlgpu:~/mtg-research/bert-edh-pair-prediction/*.mlm-v2.parquet ."
    ]
   },
   {
