[language modelling v2] different style of deck fixes

--- a/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
@@ -1027,13 +1027,29 @@
     "              .reset_index()\n",
     "              [['name', 'mytext']]\n",
     "              .rename(columns={'name': 'name_b',\n",
-    "                               'mytest': 'text_b'}))\n",
+    "                               'mytext': 'text_b'}))\n",
     "        df.loc[:, 'name_a'] = name_a\n",
     "        df.loc[:, 'text_a'] = text_a\n",
     "        \n",
     "        f_out = commander_file_name(name_a)\n",
     "        print(f_out)\n",
     "        df.to_csv(f_out, index=False, quoting=csv.QUOTE_ALL)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "scp merieke-ri-berit.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
+    "scp wort-boggart-auntie.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
+    "scp kykar-winds-fury.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
+    "scp purphoros-bronze-blooded.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
+    "scp marchesa-the-black-rose.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
+    "scp trostani-selesnyas-voice.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
+    "scp mizzix-of-the-izmagnus.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
+    "scp oona-queen-of-the-fae.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
+    "scp zada-hedron-grinder.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
+    "scp breya-etherium-shaper.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction"
    ]
   },
   {
