[cmdr rec label] adding the ability to check deck recommendations

--- a/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model-cmdr-rec-label.ipynb
@@ -60,6 +60,7 @@
     "CHECK_PRETRAINED_MODEL_RESULTS = False\n",
     "MAKE_DECK_RECOMMENDATION_INPUTS = False\n",
     "DO_DECK_RECOMMENDATIONS = False\n",
+    "CHECK_DECK_RECOMMENDATIONS = True\n",
     "\n",
     "# whether or not we cap the number of card pairs, or we choose or use\n",
     "# all possible pairs\n",
@@ -84,6 +85,9 @@
     "    assert IS_LOCAL_LAPTOP\n",
     "\n",
     "if MAKE_DECK_RECOMMENDATION_INPUTS:\n",
+    "    assert IS_LOCAL_LAPTOP\n",
+    "    \n",
+    "if CHECK_DECK_RECOMMENDATIONS:\n",
     "    assert IS_LOCAL_LAPTOP"
    ]
   },
@@ -975,6 +979,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### make recommendation inputs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1050,6 +1061,13 @@
     "scp oona-queen-of-the-fae.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
     "scp zada-hedron-grinder.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction\n",
     "scp breya-etherium-shaper.csv rzlgpu:~/mtg-research/bert-edh-pair-prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### make recommendations"
    ]
   },
   {
@@ -1132,6 +1150,208 @@
    "source": [
     "cd ~/personal/code/mtg-research/bert-edh-pair-prediction\n",
     "scp rzlgpu:~/mtg-research/bert-edh-pair-prediction/*.mlm-v2.parquet ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### eval recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "if CHECK_DECK_RECOMMENDATIONS:\n",
+    "    cards = get_cards()\n",
+    "    card_text = cards[['mytext']].copy()\n",
+    "    z = None\n",
+    "    \n",
+    "    p_cols = []\n",
+    "    for commander in commanders:\n",
+    "        f = f\"{commander_clean_name(commander, '-')}.mlm-v2.parquet\"\n",
+    "        print(f'loading {f}')\n",
+    "        p0 = f\"p0_{commander_clean_name(commander, '_')}\"\n",
+    "        p_cols.append(p0)\n",
+    "        z_now = (pd.read_parquet(f)\n",
+    "                 .rename(columns={'p0': p0})\n",
+    "                 .drop(columns=['text_b'])\n",
+    "                 .set_index('name_b'))\n",
+    "        if z is None:\n",
+    "            z = z_now\n",
+    "        else:\n",
+    "            z = z.join(z_now[[p0]], how='outer')\n",
+    "\n",
+    "    z = z.join(card_text)\n",
+    "    \n",
+    "    z.loc[:, 'best_cmdr_col'] = z[p_cols].idxmax(axis=1)\n",
+    "\n",
+    "z.head() if CHECK_DECK_RECOMMENDATIONS else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def foo(p0):\n",
+    "    z_ip = z[z.best_cmdr_col == p0].copy()\n",
+    "    z_ip.loc[:, 'specialness'] = z_ip[p0] - z_ip[p_cols].min(axis=1)\n",
+    "    z_ip.sort_values(by=p0, ascending=False, inplace=True)\n",
+    "    return (z_ip\n",
+    "            [z_ip.specialness > 0.1]\n",
+    "            [['mytext', p0, 'specialness']]\n",
+    "            .head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "foo('p0_merieke_ri_berit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo('p0_wort_boggart_auntie')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo('p0_kykar_winds_fury')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo('p0_purphoros_bronze_blooded')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo('p0_marchesa_the_black_rose')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo('p0_trostani_selesnyas_voice')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo('p0_mizzix_of_the_izmagnus')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo('p0_oona_queen_of_the_fae')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo('p0_zada_hedron_grinder')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo('p0_breya_etherium_shaper')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "\n",
+    "\n",
+    "def defining_cards(n=5):\n",
+    "    top_n_candidates = {p0: set(z\n",
+    "                                .sort_values(by=p0, ascending=False)\n",
+    "                                .head(n)\n",
+    "                                .index\n",
+    "                                .values)\n",
+    "                        for p0 in p_cols}\n",
+    "    \n",
+    "    return {p0: (top_n_candidates[p0]\n",
+    "                 .difference(*[top_n_candidates[p0_too]\n",
+    "                               for p0_too in p_cols\n",
+    "                               if p0_too != p0]))\n",
+    "            for p0 in p_cols}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defining_cards(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "z = pd.read_parquet('purphoros-bronze-blooded.mlm-v2.parquet')\n",
+    "z.head(150)"
    ]
   },
   {
